# hos_openssl

./: README.md  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/src/main/cpp/: CMakeLists.txt  aes_utils.h  base64_utils.h  hello.cpp  main.cpp  rsa.h  rsa_utils.h
entry/src/main/cpp/third_part/openssl/arm64-v8a/include/openssl/: configuration.h
entry/src/main/cpp/third_part/openssl/arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
entry/src/main/cpp/third_part/openssl/armeabi-v7a/include/openssl/: configuration.h  opensslv.h
entry/src/main/cpp/third_part/openssl/armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
entry/src/main/cpp/third_part/openssl/x86_64/include/openssl/: configuration.h
entry/src/main/cpp/third_part/openssl/x86_64/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/zh_CN/element/: string.json
scripts/: build.sh  build_config.sh  build_openssl.sh
